# nixos_cfg

./: .gitignore  .gitmodules  LICENSE  README.md  TODO.md  avahi.nix  binfmt.nix  build.nix  cargo.nix  configuration.nix  devpkgs.nix  env.nix  flake.nix  fonts.nix  gitkraken.nix  graphics.nix  hardware-configuration.nix  haskell.nix  hoogle.nix  i18n.nix  ifd-random.patch  languages.nix  media.nix  no.nix  notifications.nix  nushell  nvidia.nix  office.nix  power.nix  python.nix  qemu-binfmt.nix  qemu-overlay  result  rust.nix  services.nix  social.nix  sound.nix  steam.nix  syspkgs.nix  theme.nix  (+7 more)
archive/: avahi.nix  graphics.nix  hardware.nix  syspkgs.nix  x.nix
config/: a.nix  default.nix  nix.nix
config/cachix/: all-hies.nix  arm.nix  jupyterwith.nix  mjlbach.nix  nixos-rocm.nix  nixpkgs.nix  rjg.nix  taffy.nix
config/deploy/: default.nix  rb
config/new-modules/x/taffybar/: default.nix  mytaffybar.cabal  shell.nix  taffybar.hs
hardware/: nocam.nix
home-manager/: home.nix
modules/: android.nix  audio.nix  bash.nix  cachix.nix  channels.nix  chromium.nix  cloud-storage.nix  deluge.nix  design.nix  development.nix  disassembly.nix  editors.nix  fonts.nix  fs.nix  games.nix  i18n.nix  iOS.nix  java.nix  jetbrains.nix  linux_latest.nix  media.nix  network.nix  nix.nix  nixops.nix  notifications.nix  nur.nix  plymouth.nix  qt.nix  remote.nix  samba.nix  scrape.nix  screen.nix  social.nix  stable.nix  steam.nix  tex.nix  theme.nix  unstable.nix  users.nix  virtualgl.nix  (+3 more)
modules/home-manager/xorg/xmonad/: default.nix  my-xmonad.cabal  xmonad.hs
modules/home-manager/xorg/xmonad/files/: default.nix  lib.nix  refresh  stack.yaml
modules/home-manager/xorg/xmonad/lib/XMonad/Util/: WindowFinder.hs
overlays/: copilot_licenses.json  default.nix
pkgs/: hie_ghc-mod.nix
profiles/: default.nix  desktop.nix
services/: autoPull.nix  random-background.nix  random-bg.nix  rustup.nix  services.nix
vim/: neovim.nix  plugin-dictionaries.nix  rc.nix
virtualization/: default.nix  virtualbox.nix
wip/: overlays.nix
(+379 files in other folders)
