name:                mytaffybar
version:             0.1.0.0
author:              Evan Stoll
maintainer:          evanjsx@gmail.com
build-type:          Simple
cabal-version:       >=1.10

executable mytaffybar
  hs-source-dirs:      .
  main-is:             taffybar.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -O2
  build-depends:       base
                     , containers
                     , directory
                     , filepath
                     , gtk3
                     , taffybar
                     , bytestring
                     , process
                     , gi-gtk
                     , transformers
                     , mtl
                     , text
                     , time
                     , xmonad-contrib>=0.16
                     , X11>=1.8
  default-language:    Haskell2010
